[package]
name = "zipper-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.18"
serde = { version = "1.0.174", features = ["derive"] }
serde_json = "1.0.103"
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version = "1.29.1", features =  ["rt-multi-thread", "macros"] }
log = "0.4"
pretty_env_logger = "0.4"
dotenv = "0.15.0"